add api for user

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10.13
 RUN apt-get update
 RUN pip install -U pip
 
-RUN apt update -y
+# RUN apt update -y
 RUN apt install -y software-properties-common
 
 RUN apt install -y build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libsqlite3-dev libreadline-dev \
@@ -15,4 +15,4 @@ WORKDIR /venv
 RUN python3 -m pip install -r requirements.txt
 COPY ./client /venv
 
-CMD ["python3", "consumer_bill_info.py"]
+CMD ["python3", "api_model.py"]
