--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,10 +5,10 @@ albumentations==1.3.1
 pandas==2.1.4
 protobuf==3.20.3
 PyYAML==6.0.1
-urllib3==2.1.0
+# urllib3==2.1.0
 nvidia-pytriton==0.4.2
-triton==2.1.0
-tritonclient==2.40.0
+# triton==2.1.0
+# tritonclient==2.40.0
 # numpy==1.23.1
 kafka-python==2.0.2
 python-dotenv
