add api model update model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,21 @@
+version: "3.8"
+
 services:
-  kie_server:
-    image: yaibawiliam/kie_server:v3.0.9
-    container_name: kie_server
+  server:
+    image: yaibawiliam/kie_server:v3.1.5
     ports:
       - "8000:8000"
       - "8001:8001"
       - "8002:8002"
     volumes:
-      - /home/yaiba/project/KIE/server/log:/venv/log
-    shm_size: "1gb"
+      - type: tmpfs
+        target: /dev/shm
+        tmpfs:
+          size: 1200000000
+    environment:
+      NUMBER_OF_INSTANCES: 1
     deploy:
+      replicas: 1
       resources:
         reservations:
           generic_resources:
@@ -17,16 +23,23 @@ services:
                 kind: 'NVIDIA-GPU'
                 value: 0
           # devices:
-          # - driver: nvidia
-          #   device_ids: ['0']
-          #   capabilities: [gpu]
+          #   - driver: nvidia
+          #     device_ids: ['0']
+          #     capabilities: [gpu]
+    networks:
+      - network1
 
-  kie_client:
-    image: yaibawiliam/kie_client:v1.0
-    container_name: kie_client
-    depends_on:
-      - kie_server
-    # environment:
-    #   DATABASE_HOST: kie_client
+  client:
+    image: yaibawiliam/kie_client:v1.1.10
+    # container_name: kie_client # not support
+    # depends_on:
+    #   - kie_server
+    environment:
+      IP_DEST: kie_server
     ports:
-      - "5000:5000"
+      - "5003:5003"
+    networks:
+      - network1
+
+networks:
+  network1:
