fix bug post process time field

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,8 @@
-TEST_ENV = true
-NUMBER_OF_INSTANCES = 2
+TEST_ENV = false
+# IP_DEST = 172.19.16.59
+IP_DEST = 172.19.30.37
+URL_DB = mongodb://172.19.30.37:27017
+
+PROCESS = 3
+KAFKA = 43.198.68.123:9092,43.198.68.123:9093,43.198.68.123:9094
+GROUP_ID = zzz-aish-1
