--- a/server/cfg/re/ser_vi_layoutxlm_xfund_zh.yml
+++ b/server/cfg/re/ser_vi_layoutxlm_xfund_zh.yml
@@ -1,27 +1,8 @@
 Global:
   use_gpu: True
-  epoch_num: &epoch_num 200
-  log_smooth_window: 10
-  print_batch_step: 10
-  save_model_dir: ./output/ser_vi_layoutxlm_xfund_zh
-  save_epoch_step: 2000
-  # evaluation is run every 10 iterations after the 0th iteration
-  eval_batch_step: [ 0, 19 ]
-  cal_metric_during_train: False
-  save_inference_dir:
-  use_visualdl: False
-  seed: 2022
-  infer_img: ppstructure/docs/kie/input/zh_val_42.jpg
   d2s_train_image_shape: [3, 224, 224]
-  # if you want to predict using the groundtruth ocr info,
-  # you can use the following config
-  # infer_img: train_data/XFUND/zh_val/val.json
-  # infer_mode: False
-
-  save_res_path: ./output/ser/xfund_zh/res
-  # kie_rec_model_dir: 
-  # kie_det_model_dir:
   amp_custom_white_list: ['scale', 'concat', 'elementwise_add']
+  infer_mode: True
 
 Architecture:
   model_type: kie
@@ -30,7 +11,7 @@ Architecture:
   Backbone:
     name: LayoutXLMForSer
     pretrained: True
-    checkpoints: ckpts/ser_re_vi_layoutxlm_2708/best_model
+    checkpoints: ckpts/ser_re_vi_layoutxlm_2708_onnx/model.onnx
     # one of base or vi
     mode: vi
     num_classes: &num_classes 25
@@ -40,19 +21,6 @@ Loss:
   num_classes: *num_classes
   key: "backbone_out"
 
-# Optimizer:
-#   name: AdamW
-#   beta1: 0.9
-#   beta2: 0.999
-#   lr:
-#     name: Linear
-#     learning_rate: 0.00005
-#     epochs: *epoch_num
-#     warmup_epoch: 2
-#   regularizer:
-#     name: L2
-#     factor: 0.00000
-
 PostProcess:
   name: VQASerTokenLayoutLMPostProcess
   class_path: &class_path cfg/re/class_list_xfun.txt
@@ -61,24 +29,18 @@ Metric:
   name: VQASerTokenMetric
   main_indicator: hmean
 
-Train:
+Eval:
   dataset:
-    name: SimpleDataSet
-    data_dir: train_data/XFUND/zh_train/image
-    label_file_list: 
-      - train_data/XFUND/zh_train/train.json
-    ratio_list: [ 1.0 ]
     transforms:
-      - DecodeImage: # load image
+      - DecodeImageV2: # load image
           img_mode: RGB
           channel_first: False
       - VQATokenLabelEncode: # Class handling label
           contains_re: False
           algorithm: *algorithm
           class_path: *class_path
-          use_textline_bbox_info: &use_textline_bbox_info True
-          # one of [None, "tb-yx"]
-          order_method: &order_method "tb-yx"
+          use_textline_bbox_info: True
+          order_method: tb-yx
       - VQATokenPad:
           max_seq_len: &max_seq_len 512
           return_attention_mask: True
@@ -93,44 +55,7 @@ Train:
           order: 'hwc'
       - ToCHWImage:
       - KeepKeys:
-          keep_keys: [ 'input_ids', 'bbox', 'attention_mask', 'token_type_ids', 'image', 'labels'] # dataloader will return list in this order
-  loader:
-    shuffle: True
-    drop_last: False
-    batch_size_per_card: 8
-    num_workers: 4
-
-Eval:
-  dataset:
-    name: SimpleDataSet
-    data_dir: train_data/XFUND/zh_val/image
-    label_file_list:
-      - train_data/XFUND/zh_val/val.json
-    transforms:
-      - DecodeImageV2: # load image
-          img_mode: RGB
-          channel_first: False
-      - VQATokenLabelEncode: # Class handling label
-          contains_re: False
-          algorithm: *algorithm
-          class_path: *class_path
-          use_textline_bbox_info: True
-          order_method: tb-yx
-      - VQATokenPad:
-          max_seq_len: *max_seq_len
-          return_attention_mask: True
-      - VQASerTokenChunk:
-          max_seq_len: *max_seq_len
-      - Resize:
-          size: [224,224]
-      - NormalizeImage:
-          scale: 1
-          mean: [ 123.675, 116.28, 103.53 ]
-          std: [ 58.395, 57.12, 57.375 ]
-          order: 'hwc'
-      - ToCHWImage:
-      - KeepKeys:
-          keep_keys: [ 'input_ids', 'bbox', 'attention_mask', 'token_type_ids', 'image', 'labels'] # dataloader will return list in this order
+          keep_keys: [ 'input_ids', 'bbox', 'attention_mask', 'token_type_ids', 'image', 'labels', 'segment_offset_id', 'ocr_info', 'entities'] # dataloader will return list in this order
   loader:
     shuffle: False
     drop_last: False
