--- a/server/cfg/re/re_vi_layoutxlm_xfund_zh.yml
+++ b/server/cfg/re/re_vi_layoutxlm_xfund_zh.yml
@@ -24,7 +24,7 @@ Architecture:
     name: LayoutXLMForRe
     pretrained: True
     mode: vi
-    checkpoints: ckpts/re_vi_layoutxlm_2708
+    checkpoints: ckpts/re_vi_layoutxlm_0827
 
 Loss:
   name: LossFromOutput
@@ -76,11 +76,11 @@ Train:
       - TensorizeEntitiesRelations:
       - Resize:
           size: [224,224]
-      - NormalizeImage:
-          scale: 1
-          mean: [ 123.675, 116.28, 103.53 ]
-          std: [ 58.395, 57.12, 57.375 ]
-          order: 'hwc'
+      # - NormalizeImage:
+      #     scale: 1
+      #     mean: [ 123.675, 116.28, 103.53 ]
+      #     std: [ 58.395, 57.12, 57.375 ]
+      #     order: 'hwc'
       - ToCHWImage:
       - KeepKeys:
           keep_keys: [ 'input_ids', 'bbox','attention_mask', 'token_type_ids', 'entities', 'relations'] # dataloader will return list in this order
