--- a/client/.env
+++ b/client/.env
@@ -1,9 +1,10 @@
 TEST_ENV = false
 # IP_DEST = 172.19.16.59
-IP_DEST = 172.19.30.37
+IP_DEST = 172.19.30.25
+IP_API_CLIENT = http://172.19.30.25:5003/ser_re_visual
 URL_DB = mongodb://admin:92F767B6302F76A799A75447006AA59A@16.163.245.213:27017
 #mongodb://172.19.30.37:27017
 
-PROCESS = 3
+PROCESS = 7
 KAFKA = 43.198.68.123:9092,43.198.68.123:9093,43.198.68.123:9094
 GROUP_ID = zzz-aish-1
