--- a/client/postprocess/cfg/check_bank_info.yaml
+++ b/client/postprocess/cfg/check_bank_info.yaml
@@ -1,135 +1,132 @@
 check_all_number:
-  "101010": [payer_number_value]
-  "101020": [payer_number_value]
-  "101030": [payer_number_value]
-  "101050": [serial_number_value]
-  "101060": [payer_number_value]
-  "102010": [payer_number_value]
-  # "103010": [serial_number_value]
-  "103020": [payer_number_value]
-  "103030": [serial_number_value, payer_number_value]
-  "104010": [serial_number_value, payer_number_value]
-  "104020": [serial_number_value, payer_number_value]
-  "104030": [serial_number_value]
-  "105010": [serial_number_value, payer_number_value]
-  "105020": [serial_number_value]
-  "106010": [payer_number_value]
-  "106020": [payer_number_value]
-  "106030": [payer_number_value]
-  "106040": [payer_number_value]
-  "107010": [payer_number_value]
-  "107020": [payer_number_value]
-  "109010": [payer_number_value]
-  "109020": [payer_number_value]
-  "111010": [payer_number_value]
-  "113010": [serial_number_value]
-  "113020": [serial_number_value]
-  "113030": [serial_number_value]
-  "114010": [beneficiary_number_value, payer_number_value, serial_number_value]
-  "114020": [beneficiary_number_value, payer_number_value, serial_number_value]
-  "115010": [serial_number_value]
-  "117010": [payer_number_value]
-  "119010": [payer_number_value]
-  "119030": [payer_number_value]
-  "129010": [payer_number_value]
-  "134010": [payer_number_value]
-  "139010": [serial_number_value]
-  "144030": [serial_number_value]
-  "145010": [serial_number_value]
-  "150010": [payer_number_value]
-  "157010": [payer_number_value]
-  "158010": [payer_number_value]
-  "161010": [serial_number_value]
-  "164010": [payer_number_value, payer_number_value]
-  "177010": [payer_number_value]
-  "184010": [payer_number_value]
-  "185010": [payer_number_value]
-  "190010": [payer_number_value]
-  "190020": [payer_number_value]
-  "191020": [serial_number_value]
-  "195020": [payer_number_value]
-  "201010": [payer_number_value]
-  "216010": [payer_number_value]
-  "225020": [payer_number_value]
-  "236010": [serial_number_value]
-  "236040": [serial_number_value]
-  "243010": [serial_number_value]
-  "243020": [serial_number_value]
-  "243040": [serial_number_value]
-  "243050": [serial_number_value]
-  "264010": [serial_number_value]
-  "274010": [payer_number_value]
+  "101010": [payer_acc]
+  "101020": [payer_acc]
+  "101030": [payer_acc]
+  "101050": [seri_number]
+  "101060": [payer_acc]
+  "102010": [payer_acc]
+  # "103010": [seri_number]
+  "103020": [payer_acc]
+  "103030": [trans_time, seri_number, payer_acc]
+  "104010": [trans_time, seri_number, payer_acc]
+  "104020": [seri_number, payer_acc]
+  "104030": [seri_number]
+  "105010": [seri_number, payer_acc]
+  "105020": [seri_number]
+  "106010": [trans_time, payer_acc]
+  "106020": [trans_time, payer_acc]
+  "106030": [payer_acc]
+  "106040": [payer_acc]
+  "107010": [payer_acc]
+  "107020": [payer_acc]
+  "109010": [payer_acc]
+  "109020": [payer_acc]
+  "111010": [payer_acc]
+  "113010": [seri_number]
+  "113020": [seri_number]
+  "113030": [seri_number]
+  "114010": [payee_acc, payer_acc, seri_number, trans_time]
+  "114020": [payee_acc, payer_acc, seri_number]
+  "115010": [seri_number]
+  "117010": [payer_acc]
+  "119010": [payer_acc]
+  "119030": [payer_acc]
+  "129010": [payer_acc]
+  "134010": [payer_acc]
+  "139010": [seri_number]
+  "144030": [seri_number]
+  "145010": [seri_number]
+  "150010": [payer_acc]
+  "157010": [payer_acc]
+  "158010": [payer_acc]
+  "161010": [seri_number]
+  "164010": [payer_acc, payer_acc]
+  "177010": [payer_acc]
+  "184010": [payer_acc]
+  "185010": [payer_acc]
+  "190010": [payer_acc]
+  "190020": [payer_acc]
+  "191020": [seri_number]
+  "195020": [payer_acc]
+  "201010": [payer_acc]
+  "216010": [payer_acc]
+  "225020": [payer_acc]
+  "236010": [seri_number]
+  "236040": [seri_number]
+  "242010": [trans_time]
+  "242020": [trans_time]
+  "243010": [trans_time, seri_number]
+  "243020": [trans_time, seri_number]
+  "243040": [seri_number]
+  "243050": [seri_number]
+  "264010": [seri_number]
+  "274010": [payer_acc]
+
+format_time:
+  "101010": [trans_time]
+  "101020": [trans_time]
+  "101030": [trans_time]
+  "103010": [trans_time]
+  "103030": [trans_time]
+  "104010": [trans_time]
+  "104030": [trans_time]
+  "106010": [trans_time]
+  "106020": [trans_time]
+  "242020": [trans_time]
+  "243010": [trans_time]
+  "243020": [trans_time]
+  "243050": [trans_time]
 
 len_value_all_bank:
-  serial_number_value: 5
-  # payer_number_value: 6
+  seri_number: 5
+  payer_acc: 6
 
 len_value:
   "105020":
-    serial_number_value: 15
+    seri_number: 15
   "106010":
-    serial_number_value: 7
+    seri_number: 7
   "110010":
-    serial_number_value: 22
+    seri_number: 22
   "114020":
-    serial_number_value: 10
+    seri_number: 10
   "139010":
-    serial_number_value: 20
+    seri_number: 20
   "157030":
-    serial_number_value: 33
+    seri_number: 33
   "161010":
-    serial_number_value: 22
+    seri_number: 22
   "176010":
-    serial_number_value: 11
+    seri_number: 11
   "180010":
-    serial_number_value: 20
+    seri_number: 20
   "198010":
-    serial_number_value: 20
+    seri_number: 20
   "203030":
-    serial_number_value: 8
+    seri_number: 8
   "243010":
-    serial_number_value: 25
+    seri_number: 25
   "243020":
-    serial_number_value: 22
+    seri_number: 22
   "274010":
-    serial_number_value: 15
+    seri_number: 15
   "282010":
-    serial_number_value: 15
+    seri_number: 15
 
-character_rm:
-  all_bank:
-    # phone_time: [号, "@", 支, C, D, Q, "?", "a", "L"]
-    payer_name_value: [":", ：]
-    payer_number_value: [_, ▁, ：, ":", ",", ，, （, ）, (, ), ">"]
-    payer_bank_value: [":", ：]
-    beneficiary_name_value: [":", ：]
-    beneficiary_number_value: [_, ▁, ：, ":", ",", ，, （, ）, (, ), ">"]
-    beneficiary_bank_value: [":", ：]
-    serial_number_value: [":", ：, "|", "<"]
-    others_serial_number_value: [":", ：]
-    transfer_money: [金额：, ":", ：, ￥, ¥, 元]
-    transfer_money_text_value: [":", ：]
-    account_balance: [金额：, ":", ：, ￥, ¥, 元]
+ch_rm:
+  all:
+    balance: [￥, ¥, 元]
   "101010":
-    transfer_time_value: ["A"]
-  "106010":
-    payer_name_value: ["向您转账", "向您"]
+    trans_time: ["A"]
+  "103010":
+    trans_time: ["."]
   "106030":
-    beneficiary_bank_value: [天天正收益]
+    balance: [请您评价]
+  "110010":
+    trans_time: ["|个人隐私信息！", "|", "个人"]
   "114010":
-    transfer_time_value: ["发银行", "表", "用", "意", "纯", "辣"]
+    trans_time: ["发银行", "表", "用", "意", "纯", "辣"]
   "118010":
-    others_serial_number_value: ["专用章"]
+    code_check: ["专用章"]
   "182010":
-    serial_number_value: ["K"]
-  "236020":
-    transfer_time_value: [于, 转账]
-  "243020":
-    payer_bank_value: ["("]
-
-# split_letter_number:
-#   "103020": [beneficiary_account_name_value, beneficiary_account_number_value]
-#   "103060": [beneficiary_account_name_value, beneficiary_account_number_value]
-#   "243020": [payer_bank_value, payer_account_number_value]
-#   "243030": [payer_bank_value, payer_account_number_value]
-# "243050": [payer_bank_value, payer_account_number_value]
+    seri_number: ["K"]
